Mon Nov 15 14:59:57 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/Reader_T.cpp:
          Typo.

Mon Nov 15 14:09:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/KeyedSamples/Receiver/Keyed_Test_Receiver_exec.cpp:
          Fixed incorrect logging

Mon Nov 15 13:40:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/PortStatusListener.cpp:
          Fixed incorrect log format specifiers

Mon Nov 15 13:12:37 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager.h:
        * connectors/dds4ccm/impl/ConditionManager.cpp:
        * connectors/dds4ccm/impl/Reader_T.cpp:
        * connectors/dds4ccm/impl/ndds/WaitSet.h:
        * connectors/dds4ccm/impl/ndds/WaitSet.cpp:
          Moved implementation of check_handle.

Mon Nov 15 12:45:07 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipantManager.cpp:
        * connectors/dds4ccm/impl/ndds/TypeSupport.h:
        * connectors/dds4ccm/impl/ndds/TypeSupport.cpp:
          Fixed memory leak and shutdown crashes

Mon Nov 15 12:08:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/PublisherListener.cpp:
        * connectors/dds4ccm/impl/SubscriberListener.cpp:
        * connectors/dds4ccm/impl/Utils.h:
          Print QoSPolicyId_t as readable string

Mon Nov 15 11:36:18 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Subscriber_Base_T.h:
          Removed ndds include

        * connectors/dds4ccm/impl/ndds/TypeSupport.h:
        * connectors/dds4ccm/impl/ndds/TypeSupport.cpp:
          Added missing virtual destructor

Mon Nov 15 11:33:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Listen_T.cpp: