@@ -1,0 +1,17 @@
+// $Id$
+
+#ifndef STATES_TEST_H_
+#define STATES_TEST_H_
+
+#include "dds4ccm/idl/dds_rtf2_dcpsC.h"
+#include "ndds/ndds_cpp.h"
+
+class StatesTest
+{
+public:
+  StatesTest ();
+
+  int run ();
+};
+
+#endif /* STATES_TEST_H_ */
